--- a/kubernetes/feature_validate/00_pod_preStopHook/Makefile
+++ b/kubernetes/feature_validate/00_pod_preStopHook/Makefile
@@ -2,7 +2,7 @@
 .PHONY: build
 build:
 	go build -o main main.go
-	docker build -t 172.30.3.150/test/mta-mock:0.0.1 .
+	docker build --progress=plain -t 172.30.3.150/test/mta-mock:0.0.1 .
 	docker push 172.30.3.150/test/mta-mock:0.0.1
 
 runMta:
