feat(k8s-pod-preStrop): 测试Pod preStop特性

--- a/kubernetes/feature_validate/00_pod_preStopHook/Makefile
+++ b/kubernetes/feature_validate/00_pod_preStopHook/Makefile
@@ -1,6 +1,10 @@
 
 .PHONY: build
 build:
-	go build main.go -o main
-	docker build -t 172.30.3.150/test/mta-mock:0.0.1 .
+	go build -o main main.go
+	docker build --progress=plain -t 172.30.3.150/test/mta-mock:0.0.1 .
 	docker push 172.30.3.150/test/mta-mock:0.0.1
+
+runMta:
+	docker rm -f mta-test
+	docker run -d -p 19090:19090 --name mta-test 172.30.3.150/test/mta-mock:0.0.1 ./main -delay=20
