--- a/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
@@ -27,16 +27,17 @@ RUN rm -f /lib/systemd/system/multi-user.target.wants/* \
 
 # 修改apt源为清华源
 RUN cat <<EOF > /etc/apt/sources.list
-deb http://mirrors.aliyun.com/ubuntu/ mantic main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ mantic main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ mantic-security main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ mantic-security main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ mantic-updates main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ mantic-updates main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ mantic-proposed main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ mantic-proposed main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ mantic-backports main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ mantic-backports main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ lunar main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ lunar main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ lunar-security main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ lunar-security main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ lunar-updates main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ lunar-updates main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ lunar-proposed main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ lunar-proposed main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ lunar-backports main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ lunar-backports main restricted universe multiverse
+
 EOF
 
 RUN apt update -y && apt upgrade -y && \
