feat: Dockerfile for dev

--- a/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
@@ -25,6 +25,9 @@ RUN rm -f /lib/systemd/system/multi-user.target.wants/* \
   /lib/systemd/system/sysinit.target.wants/systemd-tmpfiles-setup* \
   /lib/systemd/system/systemd-update-utmp*
 
+# 安装证书
+RUN apt update -y && apt install -y --no-install-recommends ca-certificates apt-transport-https
+
 # 修改apt源为清华源
 RUN cat <<EOF > /etc/apt/sources.list
 deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ lunar main restricted universe multiverse
@@ -34,8 +37,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ lunar-security main restricted 
 
 EOF
 
-RUN apt install -y --no-install-recommends ca-certificates apt-transport-https &&  \
-    apt update -y && apt upgrade -y && \
+RUN apt update -y && apt upgrade -y && \
     DEBIAN_FRONTEND=noninteractive TZ=Asia/Shanghai apt -y install tzdata && \
     apt install -y man-db manpages-posix && apt install -y manpages-dev manpages-posix-dev && yes | unminimize && \
     apt install -y net-tools telnet sysstat bridge-utils bash-completion vim jq tar openssl iputils-ping lsof lvm2 \
