feat: Dockerfile for dev

--- a/dockerfiles/develop-env/ubuntu/24.04/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/24.04/Dockerfile
@@ -144,7 +144,7 @@ RUN curl -SL https://mirrors.aliyun.com/golang/go${GOLANGVERSION}.linux-amd64.ta
     /usr/local/go/bin/go env -w GO111MODULE=on && \
     /usr/local/go/bin/go env -w GOPROXY=https://goproxy.cn,direct && \
     # 安装不同的go版本，并使用update-alternatives工具进行切换
-    versions='1.19.13 1.20.8 1.21.0 1.22.12 1.23.11' && \
+    versions='1.19.13 1.20.8 1.21.0 1.22.12' && \
     priority=1 && for V in ${versions}; do \
     /usr/local/go/bin/go install golang.org/dl/go$V@latest && ~/go/bin/go$V download && \
     update-alternatives  --install /usr/bin/go go ~/sdk/go$V/bin/go $priority && priority=$(($priority+1)); done && \
